Resolve contrast ratio issue in breadcrumb
Fixes #28

New contrast ratio is 7.1:1 (obtained from Colour Contrast Analyser - https://www.tpgi.com/color-contrast-checker/)

--- a/assets/scss/_breadcrumb.scss
+++ b/assets/scss/_breadcrumb.scss
@@ -1,3 +1,10 @@
 .breadcrumb {
   background-color: $light;
 }
+
+.breadcrumb-item {
+  a,
+  &.active {
+    color: $dark;
+  }
+}
